<resources>
    <string name="app_name">Ethereum_Blockchain</string>
    <string name="ethereum_blockchain_public_address">Ethereum Blockchain\n Public address</string>
    <string name="place_the_code_inside_the_frame">Place the code inside the frame</string>
    <string name="or_enter_your_address_below">Or, Enter your address below</string>
    <string name="enter">Ethereum address</string>
    <string name="show">Show Blockchain Data</string>
    <string name="total_balance">Total Balance</string>
    <string name="total_received_balance">Total Received Transaction</string>
    <string name="total_send_balance">Total Send Transaction</string>
    <string name="total_nonce">Total Nonce</string>
    <string name="sender_address">Sender</string>
    <string name="receiver_address">Receiver</string>
    <string name="total">Total</string>
    <string name="time">Time</string>
    <string name="total_transaction">Total Transaction</string>
    <string name="no_data_found">No Data Found! check your address.</string>
    <string name="info">Info</string>
</resources>